--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>URL Shortener Microservice | freeCodeCamp.org</title>
-    <link
-      rel="icon"
-      type="image/png"
-      href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png"
-    />
-    <link href="/public/style.css" rel="stylesheet" type="text/css" />
-  </head>
 
-  <body>
-    <h1>URL Shortener Microservice</h1>
+<head>
+    <title>URL Shortener Microservice | Vicente Ferrer</title>
+    <link rel="icon" type="image/png" href="https://cdn.freecodecamp.org/universal/favicons/favicon-16x16.png" />
+    <link href="css/style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
     <main>
-      <section>
-        <form action="api/shorturl" method="POST">
-          <fieldset>
-            <legend>URL Shortener</legend>
-            <label for="url_input">URL:</label>
-            <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
-            <input type="submit" value="POST URL" />
-          </fieldset>
-        </form>
-      </section>
+        <h1>URL Shortener Microservice</h1>
+        <hr>
+        <section>
+            <form action="api/shorturl" method="POST">
+                <label>URL:
+                    <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+                </label>
+                <input type="submit" value="POST URL" />
+            </form>
+        </section>
+        <footer>
+            <p>Developed by <a href="#">Vicente Ferrer</a></p>
+        </footer>
     </main>
-    <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
-    </footer>
-  </body>
+</body>
+
 </html>
